clusters/coffee/coffeeshop/coffeeshop/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coffeeshop
  namespace: coffeeshop
  labels:
    app.kubernetes.io/name: coffeeshop
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
       maxSurge: 1
       maxUnavailable: 1
  selector:
    matchLabels:
      app: coffeeshop
  template:
    metadata:
      labels:
        app: coffeeshop
    spec:
      containers:
        - name: app
          image: ghcr.io/cse-labs/coffeeshop:latest
          imagePullPolicy: Always
          args: [ ]
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            failureThreshold: 10
            periodSeconds: 60
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            initialDelaySeconds: 5
            failureThreshold: 10
            periodSeconds: 60
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 300m
              memory: 64Mi
