clusters/coffee/coffeeshop/coffeeshop/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coffeeshop
  namespace: coffeeshop
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: coffeeshop
